--- a/Cultivation/client/src/components/Profile.css
+++ b/Cultivation/client/src/components/Profile.css
@@ -1,6 +1,3 @@
-/* Profile.css */
-
-/* Basic Reset */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -8,7 +5,7 @@
     font-family: Arial, sans-serif;
 }
 
-div {
+.profile-container {
     padding: 2em;
     max-width: 600px;
     margin: 0 auto;
@@ -23,40 +20,33 @@ h2 {
     padding-bottom: 0.5em;
 }
 
-img[tag="profile-pic"] {
-    display: block;
-    width: 150px;
-    height: 150px;
-    margin: 1em auto;
-    border-radius: 50%; /* Rounded corners */
-    object-fit: cover; /* In case images are not square-shaped, they'll fit properly */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.upload-btn-wrapper {
+    margin: 1em;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
 }
 
-button {
-    display: block;
+.upload-btn-wrapper button {
+    border: 2px solid gray;
+    color: gray;
+    background-color: white;
+    padding: 8px 20px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+.upload-btn-wrapper button:hover {
     background-color: #007BFF;
     color: #fff;
-    padding: 0.5em 1em;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin: 1em auto;
 }
 
-button:hover {
-    background-color: #0056b3;
+.upload-btn-wrapper input[type=file] {
+    font-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
 }
-
-p {
-    font-size: 1.1em;
-    margin-bottom: 1em;
-    color: #666;
-}
-
-p span {
-    color: #333;
-    font-weight: bold;
-}
-
